@@ -161,4 +161,4 @@ issue 219:
 issue 235:
     bug: tools are CONSUMED when using them
 
-[236-239]
+[236-240]
