@@ -138,7 +138,7 @@ class Chunk:
         """
         return position in self.world or G.worldgenerationhandler.task_handler.get_block(position) is not None
 
-    def add_block(self, position: tuple, block_name: str, immediate=True, block_update=True, blockupdateself=True,
+    def add_block(self, position: tuple, block_name: typing.Union[str, Block.Block], immediate=True, block_update=True, blockupdateself=True,
                   args=[], kwargs={}):
         """
         adds an block to the given position
@@ -161,6 +161,7 @@ class Chunk:
         if issubclass(type(block_name), Block.Block):
             blockobj = block_name
             blockobj.position = position
+            blockobj.face_state.update()
         else:
             table = G.registry.get_by_name("block").full_table
             if block_name not in table:
