@@ -1245,3 +1245,4 @@ sstarted these clone on 12th of July, 2019
 [uuk]: removed all things deprecated for this next release cycle
 [uuk]: a lot of block model related things are now data-gen-ed
 [uuk]: improved crafting system
+[uuk]: added FallingBlockEntity replacing old fall code of IFallingBlock
