@@ -60,6 +60,8 @@ changelog of snapshot [next]
     - MDK is now capable of building the mod into one final zipfile
     - added data generators for more stuff
     - improved crafting system
+    - added FallingBlockEntity
+    - IFallingBlock is now based around an entity instead of an simple block
 
     fixed issues:
         - IHorizontalOrientableBlock was behaving incorrectly
